--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="container">
-    <h1>Hey <span class="name">My Love</span> 💕</h1>
+    <h1>Heyyy <span class="name">AMBIKA my Pookiee</span> 💕</h1>
     <h2>Will you be my Valentine? 💘</h2>
 
     <div class="buttons">
@@ -21,3 +21,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
