--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins&display=swap" rel="stylesheet">
 </head>
+<audio id="bgMusic" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
 <body>
 
   <div class="container">
@@ -21,4 +24,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
