--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
 <body>
 
-  <div class="container">
-    <h1>Heyyy <span class="name">AMBIKA my Pookiee</span> 💕</h1>
+  <audio id="bgMusic" loop>
+    <source src="music.mp3" type="audio/mpeg">
+  </audio>
+
+  <div class="container" id="mainContent">
+    <h1>Heyyyy <span class="name">Ambika My pookie!!</span> 💕</h1>
     <h2>Will you be my Valentine? 💘</h2>
 
     <div class="buttons">
@@ -20,11 +24,10 @@
   </div>
 
   <script src="script.js"></script>
-  <audio id="bgMusic" loop>
-  <source src="music.mp3" type="audio/mpeg">
-  </audio>
 </body>
+
 </html>
+
 
 
 
